fix(routes/index): overflow in project cards

--- a/src/routes/index.module.scss
+++ b/src/routes/index.module.scss
@@ -1,8 +1,8 @@
 .ProjectsSectionCardContainer {
     display: flex;
-    gap:  1rem;
+    gap: 1rem;
     flex-wrap: wrap;
     justify-content: center;
-    width: 150%;
-    margin-left: -25%;
+    width: min(150%, 77vw);
+    align-self: center;
 }
